Updated npm install command in deploy.yml and other config changes

--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "vahanam",
   "version": "1.0.0",
+  "homepage": ".",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "repository": {
     "type": "git",
@@ -16,5 +20,20 @@
   "bugs": {
     "url": "https://github.com/BPT083/vahanam-react/issues"
   },
-  "homepage": "https://github.com/BPT083/vahanam-react#readme"
+  "homepage": "https://github.com/BPT083/vahanam-react#readme",
+  "dependencies": {
+    "react-scripts": "^5.0.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
