--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vahanam",
   "version": "1.0.0",
-  "homepage": ".",
+  "homepage": "https://github.com/BPT083/vahanam-react#readme",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -20,9 +20,9 @@
   "bugs": {
     "url": "https://github.com/BPT083/vahanam-react/issues"
   },
-  "homepage": "https://github.com/BPT083/vahanam-react#readme",
   "dependencies": {
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "typescript": "4.9.5"
   },
   "browserslist": {
     "production": [
