--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "url": "https://github.com/BPT083/vahanam-react/issues"
   },
   "dependencies": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-scripts": "^5.0.1",
     "typescript": "4.9.5"
   },
